--- a/03-HTML/stran.html
+++ b/03-HTML/stran.html
@@ -45,7 +45,7 @@
     <h2 id="1">Details</h2>
 
     <ul>
-        <!-- <img src="C:\Users\xb76304\RP\02-git-md\racunalniski-praktikum\tea-bowl.jpg" alt="Skleda za čaj">tea-bowl.jpg</img> -->
+        <!-- <img src="C:\Users\xb76304\RP\02-git-md\racunalniski-praktikum\03-HTML\tea-bowl.jpg" alt="Skleda za čaj">tea-bowl.jpg</img> -->
         <li>A white porcelain tea bowl exhibit in the Montreal Museum of Fine Arts</li>
         
         <li>To maintain consistent results, the following are recommendations given by the standard:</li>
