--- a/04-css/dokument.html
+++ b/04-css/dokument.html
@@ -4,11 +4,11 @@
 <head>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="oblikovanje.css">
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
     <title>HTCPCP</title>
 </head>
 <body>
-    <section>
+    <section id="uvod">
         <h1>Hyper Text Coffee Pot Control Protocol</h1>
 
         <p>The content of this page has been slightly adapted from the Wikipedia page on <a
@@ -25,14 +25,14 @@
                 <li><a href="#protocol">Protocol</a></li>
                 <li><a href="#commandsreplies">Commands and replies</a></li>
                 <li><a href="#save418">Save 418 movement</a></li>
-            </ul>
+            </ul> 
         </div>
     </section>
 
     <section>
         <h2 id="protocol">Protocol</h2>
 
-        <div>
+        <div class="slika">
             <img src="Htcpcp_teapot.jpg" alt="A white teapot with a visible and a microcontroller">
             <p>Implementation of HTCPCP at error418.net</p>
             <p>A.cilia / <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA-3.0</a></p>
@@ -55,7 +55,7 @@
     <section>
         <h2 id="commandsreplies">Commands and replies</h2>
 
-        <div>
+        <div class="slika">
             <img src="Htcpcp_teapot.jpg" alt="A white teapot with a visible and a microcontroller">
             <p>A Denby teapot glued to a netbook in order to provide RFC 2324-compliant (Hyper Text Coffee Pot Control Protocol) responses.</p>
             <p><a href="http://www.cs.rhul.ac.uk/home/joseph">http://www.cs.rhul.ac.uk/home/joseph</a> / <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA-3.0</a></p>
